--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		</header>
 		<nav>
 			<ul>
-				<li class="a">웹페이지 1</li>
-				<li class="b">웹페이지 2</li>
-				<li class="c">웹페이지 3</li>
+				<li class="a"><a href="https://hje05.github.io/home/text">글자</a></li>
+				<li class="b"><a href="https://hje05.github.io/home/image">이미지</a></li>
+				<li class="c"><a href="https://hje05.github.io/home/color">색상</a></li>
+				<li class="d"><a href="https://hje05.github.io/home/form">형태</a></li>
 			</ul>
 		</nav>
 		<footer>
